# clark-skill-collection

./: .gitignore  extract_articles.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/crawl/: SKILL.md  pyproject.toml
.claude/skills/crawl/reference/: translate.md
.claude/skills/crawl/scripts/: check_and_run_uv.py  main.py  pyproject.toml
.claude/skills/crawl/scripts/stagehand/: logging.py
.claude/skills/crawl/temp_scripts/: extract_articles.py  pyproject.toml
.claude/skills/podcast-writer/: SKILL.md  pyproject.toml
.claude/skills/podcast-writer/scripts/: runninghub_api.py
.claude/skills/translate/: SKILL.md
.claude/skills/translate/scripts/: translate_articles.py
.claude/skills/vision/: pyproject.toml  vision_analyzer.py
.claude/skills/zhipu-search/: pyproject.toml  zhipu_searcher.py
