[project]
name = "clark-skill-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [".claude/skills/vision", ".claude/skills/crawl", ".claude/skills/zhipu-search", ".claude/skills/podcast-writer"]
