[project]
name = "clark-skill-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
]

[tool.uv.workspace]
members = [".claude/skills/vision", ".claude/skills/crawl/scripts",".claude/skills/crawl/temp_scripts", ".claude/skills/zhipu-search", ".claude/skills/podcast-writer"]
